# FluorescenceQuant

./: .gitignore  .gitmessage.txt  CMakeLists.txt  h -u origin master  main.cpp  qml.qrc
APP/: MainViewModel.cpp  MainViewModel.h
APP/ADS1115/inc/: IIODeviceController.h  IIOReaderThread.h
APP/ADS1115/src/: IIODeviceController.cpp  IIOReaderThread.cpp
APP/CardDetect/inc/: CardWatcherStd.h  KeysProxy.h
APP/CardDetect/src/: CardWatcherStd.cpp
APP/Control_module/inc/: DeviceManager.h  DeviceProtocol.h  DeviceService.h  DeviceState.h  DeviceStatusObject.h  ModbusRtuClient.h  ModbusTypes.h  delay.h
APP/Control_module/src/: DeviceManager.cpp  DeviceProtocol.cpp  DeviceService.cpp  ModbusRtuClient.cpp  delay.c
APP/EM5820H/inc/: PrinterManager.h  printerDeviceController.h  printer_lib.h  printer_type.h
APP/EM5820H/src/: PrinterManager.cpp  printerDeviceController.cpp
APP/Guard/inc/: NetWebGuard.h  WifiDetectWorker.h
APP/Guard/src/: NetWebGuard.cpp  WifiDetectWorker.cpp
APP/MyQmlComponents/MyCurveLoader/: CurveLoader.cpp  CurveLoader.h
APP/MyQmlComponents/MyLineSeries/: MyLineSeries.cpp  MyLineSeries.h
APP/MyQmlComponents/MySeriesFeeder/: SeriesFeeder.cpp  SeriesFeeder.h
APP/Net/: HttpTask.h  HttpWorker.cpp  HttpWorker.h
APP/Net/inc/: LabKeyClient.h  LabKeyService.h  TaskQueueWorker.h
APP/Net/src/: LabKeyClient.cpp  LabKeyService.cpp  TaskQueueWorker.cpp
APP/OTA/inc/: OtaManager.h  sha256.h  unzip.h
APP/OTA/src/: OtaManager.cpp  sha256.cpp  unzip.cpp
APP/QUIRC/: quirc.c
APP/Recognition/: DecodeWorker.cpp  DecodeWorker.h  V4L2MjpegGrabber.cpp  V4L2MjpegGrabber.h
APP/Scanner/: QrImageProvider.h  QrScanner.cpp  QrScanner.h
APP/libmodbus/lib/: libmodbus.so.5.1.0
APP/libmodbus/lib/pkgconfig/: libmodbus.pc
APP/modbus_rtu/inc/: ModbusWorkerThread.h  MotorController.h
APP/modbus_rtu/src/: ModbusWorkerThread.cpp  MotorController.cpp
APP/sqlite/DB/inc/: DBTasks.h  DBWorker.h  DTO.h  Migrations.h  SqlUtil.h
APP/sqlite/DB/src/: DBWorker.cpp  Migrations.cpp  SqlUtil.cpp
APP/sqlite/Repo/inc/: HistoryRepo.h  ProjectsRepo.h  QrRepo.h  SettingsRepo.h  UsersRepo.h
APP/sqlite/Repo/src/: HistoryRepo.cpp  ProjectsRepo.cpp  QrRepo.cpp  SettingsRepo.cpp  UsersRepo.cpp
APP/sqlite/VM/inc/: HistoryViewModel.h  ProjectsViewModel.h  QrMethodConfigViewModel.h  QrRepoModel.h  SettingsViewModel.h  UserViewModel.h
APP/sqlite/VM/src/: HistoryViewModel.cpp  ProjectsViewModel.cpp  QrMethodConfigViewModel.cpp  QrRepoModel.cpp  SettingsViewModel.cpp  UserViewModel.cpp
APP/web/inc/: embedded_web_server.h
APP/web/src/: embedded_web_server.cpp
APP/web/www/: detect.html  index.html  projects.html  sw.js
APP/web/www/assets/: app.css  detect.js  files.js  projects.js
APP/wifi/inc/: WiFiController.h  WorkerQueue.h  wifiManage.h
APP/wifi/src/: WiFiController.cpp  WorkerQueue.cpp  wifiManage.cpp
cmakes/: GenerateRcc.cmake
generated_resources/: icons.qrc
lib/: libQt5Svg.so.5  libQt5Svg.so.5.12  libQt5VirtualKeyboard.so.5  libmodbus.so.5
qml/: main.qml
resources/qml/: CameraScannerPage.qml  DetailView.qml  HeaderText.qml  IncubationManagerPage.qml  NumberPad.qml  OtaPage.qml  WifiPage.qml  main copy.qml  main.qml
resources/styles/: main.qss
